# BeetleOS

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config.mk
architectures/: x86_64.mk
kernel/: Cargo.toml  module.mk
kernel/src/: arch.rs  lib.rs  memory.rs  sync.rs
kernel/src/arch/: x86_64.rs
kernel/src/arch/x86_64/: architecture_implementation.rs  logger.rs  memory.rs  serial.rs  uefi.rs
kernel/src/arch/x86_64/memory/: physical.rs
kernel/src/sync/: global_runtime_configuration.rs  mutex.rs
targets/: x86_64-unknown-none.json
test_runner/: Cargo.toml
test_runner/src/: main.rs
