cargo-features = ["edition"]

[package]
name = "kernel"
version = "0.1.0"
authors = ["aticu <15schnic@gmail.com>"]
description = "The BeetleOS kernel."
readme = "README.md"
keywords = ["OS", "operating", "system", "BeetleOS", "kernel", "no_std"]
license = "MIT"
edition = "2018"

[features]
integration_test = []
qemu = []

[dependencies]
lazy_static = { version = "1.1.0", features = ["spin_no_std"] }
log = "0.4.4"

[target.'cfg(target_arch = "x86_64")'.dependencies]
efi = { git = "https://github.com/reynoldsbd/libefi" }
uart_16550 = "0.1.0"
x86_64 = "0.2.11"
raw-cpuid = "2.0.0"
#x86 = "0.10.0"