[package]
name = "kernel"
version = "0.1.0"
authors = ["aticu <15schnic@gmail.com>"]
description = "The BeetleOS kernel."
readme = "README.md"
keywords = ["OS", "operating", "system", "BeetleOS", "kernel", "no_std"]
license = "MIT"
edition = "2018"

[features]
qemu_integration_test = []

[dependencies]
lazy_static = { version = "1", features = ["spin_no_std"] }
log = "0.4"
spin = "0.5"

[target.'cfg(target_arch = "x86_64")'.dependencies]
nuefil = { git = "https://github.com/aticu/nuefil" }
uart_16550 = "0.1"
x86_64_crate = { package="x86_64", version = "0.2" }
raw-cpuid = "2"
size_format = "1"
